--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,10 @@
 name: Demo Workflow   # Workflow name
 
-on: 
- pull_request:             # Trigger (runs on push)
-  branches: 
-  - main
+on: push
 
 jobs:
   build:              # Job name
-    runs-on: ubuntu-latest
+    runs-on: hijas
 
     steps:
       - uses: actions/checkout@v3   # Step 1: Checkout code
